# Surfactant

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: pages.yml  publish-plugin.yml  pytest.yml  regressions-comment.yml  regressions.yml  release.yml  test_plugins.yml
docs/: basic_usage.md  conf.py  configuration_files.md  getting_started.md  plugins.md  requirements.txt  settings.md
docs/_static_html/: README.md  pypi_dependency_analyzer.html  sbom-workbench.html
docs/api/: config_manager.md
docs/capa/: README.md  index.html  worker.js
docs/windows_installer_tutorial/: execinstaller.py  setupstepper.py
plugins/: README.md
plugins/SBOMVis/SBOMVis/: visualization.py
plugins/angrimportfinder/: surfactantplugin_angrimportfinder.py
plugins/binary2strings/: surfactantplugin_binary2strings.py
plugins/cvebin2vex/: surfactantplugin_cvebintool2vex.py
plugins/dapper/: surfactantplugin_dapper.py
plugins/fuzzyhashes/: surfactantplugin_fuzzyhashes.py
plugins/grype/: surfactantplugin_grype.py
plugins/grype/tests/: test_grype.py
plugins/qilingexec/: README.md  pyproject.toml  surfactantplugin_qilingexec.py
plugins/rootfsdownloader/: README.md  pyproject.toml  surfactantplugin_rootfsdownloader.py
plugins/rootfsmanager/: README.md  pyproject.toml  surfactantplugin_rootfsmanager.py
plugins/sourcetrail_db_output/: surfactantplugin_sourcetrail_db_output.py
plugins/syft/: surfactantplugin_syft.py
scripts/: README-merge_sbom.md  load_sbom_to_neo4j.py  merge_additional_metadata.py  merge_sbom.py  regressions.py
scripts/js_libraries/: match_javascript.py
surfactant/: configmanager.py  context.py  fileinfo.py
surfactant/cmd/: cli.py  generate.py  merge.py  stat.py  tui.py
surfactant/cmd/cli_commands/: __init__.py  cli_base.py  cli_load.py  cli_save.py
surfactant/database_manager/: database_utils.py
surfactant/filetypeid/: id_extension.py  id_hex.py  id_magic.py
surfactant/infoextractors/: __macho_cpuSubtypes.py  a_out_file.py  coff_file.py  docker_image.py  elf_file.py  file_decompression.py  java_file.py  js_file.py  mach_o_file.py  native_lib_file.py  ole_file.py  pe_file.py  rpm_file.py  srec_hex.py  uimage_file.py
surfactant/output/: csv_writer.py  cyclonedx_writer.py  cytrics_writer.py  neo4j_writer.py  spdx_writer.py
surfactant/plugin/: hookspecs.py  manager.py
surfactant/relationships/: dotnet_relationship.py  elf_relationship.py  java_relationship.py  nuget_purl.py  pe_relationship.py  rpmfile_relationship.py
surfactant/relationships/_internal/: posix_utils.py  windows_utils.py
surfactant/sbomtypes/: __init__.py  _author.py  _comment.py  _file.py  _hardware.py  _name.py  _observation.py  _provenance.py  _relationship.py  _sbom.py  _software.py  _tool.py
surfactant/utils/: ahocorasick.py  ai_conn.py  capture_time.py  exit_hook.py  paths.py  regex.py
tests/: conftest.py
tests/cmd/: common.py  test_cli.py  test_generate.py  test_generate_symlinks.py  test_merge.py  test_tui.py
tests/config/: test_configmanager.py
tests/data/sample_sboms/: helics_binaries_sbom.json  helics_libs_sbom.json  helics_sbom.json
tests/file_types/: test_a_out_files.py  test_file_magic.py  test_srec_hex_files.py  test_uimage_files.py
tests/relationships/: test_dotnet.py  test_dotnet_relationship.py  test_elf.py  test_elf_relationship.py  test_java_relationship.py  test_pe.py  test_pe_relationship.py
tests/sbomtypes/: test_fs_tree.py
tests/schema/: test_cytrics_schema.py
tests/utils/: test_capture_time.py  test_paths.py
