[build-system]
requires = ["setuptools>=77.0.3", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "Surfactant"
authors = [
    {name = "Ryan Mast", email = "mast9@llnl.gov"},
    {name = "Levi Lloyd", email = "lloyd27@llnl.gov"},
    {name = "Micaela Gallegos", email = "gallegos31@llnl.gov"},
    {name = "Alexander Armstrong", email = "armstrong48@llnl.gov"},
    {name = "Shayna Kapadia", email = "kapadia2@llnl.gov"},
    {name = "Asriel Margarian", email = "margarian1@llnl.gov"},
    {name = "Matthew Kelley", email = "kelley41@llnl.gov"},
]
maintainers = [
    {name = "Ryan Mast", email = "mast9@llnl.gov"},
]
description = "Modular framework to gather file information, analyze dependencies, and generate an SBOM"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["sbom", "pe", "elf", "ole", "msi"]
license = "MIT"
license-files = ["LICENSE", "NOTICE"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Topic :: Security",
    "Topic :: Software Development",
    "Topic :: System",
    "Topic :: Utilities",
]
dependencies = [
    "dataclasses_json==0.6.*",
    "pyelftools>=0.32,<0.34",
    # This isn't semver so fix it to a specific release
    "pefile==2024.8.26",
    "dnfile>=0.17,<0.19",
    "olefile==0.47.*",
    "defusedxml==0.7.*",
    "spdx-tools==0.8.*",
    # Pinned to specific version for potential breaking changes
    "cyclonedx-python-lib==11.11.0",
    "pluggy==1.*",
    "click==8.*",
    "loguru==0.7.*",
    "tomlkit>=0.13,<0.16",
    "textual>=8,<9",
    "requests>=2.32.3",
    "rarfile==4.2.*",
    "networkx>=2.6",
    "regex; platform_python_implementation == 'CPython'",
    # Pinned to specific version for potential breaking changes
    "python-msi==0.0.0b3",
    # Pinned to specific version for potential breaking changes
    "rpmfile==2.2.1",
]
dynamic = ["version"]

[dependency-groups]
test = ["pytest", "pytest-asyncio", "jsonschema[format-nongpl]", "freezegun"]
dev = ["build", "pre-commit"]
docs = ["sphinx", "myst-parser", "furo>=2025.9.25", "sphinx-copybutton>=0.5.2"]

[project.optional-dependencies]
macho = ["lief==1.0.0"]
java = ["javatools>=1.6,==1.*"]
test = ["pytest", "pytest-asyncio", "jsonschema[format-nongpl]", "freezegun"]
dev = ["build", "pre-commit"]
docs = ["sphinx", "myst-parser", "furo>=2025.9.25", "sphinx-copybutton>=0.5.2"]

[project.scripts]
surfactant = "surfactant.__main__:main"

[project.urls]
Homepage = "https://github.com/LLNL/Surfactant"
Discussions = "https://github.com/LLNL/Surfactant/discussions"
Documentation = "https://surfactant.readthedocs.io/en/latest/"
"Issue Tracker" = "https://github.com/LLNL/Surfactant/issues"
"Source Code" = "https://github.com/LLNL/Surfactant"

[tool.setuptools.packages.find]
include = ["surfactant", "surfactant.*"]

[tool.setuptools_scm]
version_file = "surfactant/_version.py"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib", "--ignore=plugins"]
pythonpath = "."

[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.lint]
# ruff defaults: E4, E7, E9, F
select = [
    "B",      # flake8-bugbear          (B)     (https://docs.astral.sh/ruff/rules/#flake8-bugbear-b)
    "C4",     # flake8-comprehensions   (C4)    (https://docs.astral.sh/ruff/rules/#flake8-comprehensions-c4)
    "E",      # pycodestyle             (E)     (https://docs.astral.sh/ruff/rules/#pycodestyle-e-w)
    "F",      # Pyflakes                (F)     (https://docs.astral.sh/ruff/rules/#pyflakes-f)
    "FURB",   # refurb                  (FURB)  (https://docs.astral.sh/ruff/rules/#refurb-furb)
    "I",      # isort                   (I)     (https://docs.astral.sh/ruff/rules/#isort-i)
    "PIE",    # flake8-pie              (PIE)   (https://docs.astral.sh/ruff/rules/#flake8-pie-pie)
    "PL",     # Pylint                  (PL)    (https://docs.astral.sh/ruff/rules/#pylint-pl)
    "PTH",    # flake8-use-pathlib      (PTH)   (https://docs.astral.sh/ruff/rules/#flake8-use-pathlib-pth)
    "PYI",    # flake8-PYI              (PYI)   (https://docs.astral.sh/ruff/rules/#flake8-pyi-pyi)
    "Q",      # flake8-quotes           (Q)     (https://docs.astral.sh/ruff/rules/#flake8-quotes)
    "RET",    # flake8-return           (RET)   (https://docs.astral.sh/ruff/rules/#flake8-raise-rse)
    "SIM",    # flake8-simpify          (SIM)   (https://docs.astral.sh/ruff/rules/#flake8-simplify-sim)
    "TC",     # flake8-type-checking    (TC)    (https://docs.astral.sh/ruff/rules/#flake8-type-checking-tc)
    "UP",     # pyupgrade               (UP)    (https://docs.astral.sh/ruff/rules/#pyupgrade-up)
    "W",      # pycodestyle             (W)     (https://docs.astral.sh/ruff/rules/#pycodestyle-e-w)
    "RUF010", #
    "RUF013", # PEP 484 prohibits implicit `Optional`
    "RUF019", # [*] Unnecessary key check before dictionary access",
    "RUF022", #`__all__` is not sorted
]




ignore = [
  "F841",
  "E501",   # line-too-long
  "SIM300",
  "D100",   # missing-module-docstring
  "D101",   # missing-class-docstring
  "D102",   # missing-function-docstring
  "PLR0912", # too-many-branches
  "PLR0915", # too-many-statements
  "PLR0912", # too-many-nested-blocks
  "PLR0914", # too-many-locals
  "PLR0913", # too-many-arguments
  "PLR2004",  # Magic Number
  "PLR0911", # To many Return Statements
]

# don't fix flake8-bugbear (`B`) violations
unfixable = ["B"]

# Ignore `E402` import violations in plugin manager
[tool.ruff.lint.per-file-ignores]
"surfactant/plugin/manager.py" = [
    "E402",
    "PLC0415" # `import` should be at the top-level of a file
    ]
"tests/*" = ["PLR2004"]
"surfactant/plugin" = []

[tool.pylint.messages_control]
max-line-length = "100"
good-names-rgxs = "x,y,e,md,sw"
disable = [
  "line-too-long",
  "missing-module-docstring",
  "missing-class-docstring",
  "missing-function-docstring",
  "duplicate-code",
  "too-many-branches",
  "too-many-statements",
  "unused-variable",
  "invalid-name",
  "no-member",
  "too-many-nested-blocks",
  "fixme",
  "too-many-locals",
  "too-many-arguments",
  "unused-argument",
  "unspecified-encoding",
  "import-error",
]
