[build-system]
requires = ["setuptools>=77.0.3", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "surfactantplugin-rootfsdownloader"
authors = [
    {name = "Kendall Harter", email = "harter8@llnl.gov"},
]
description = "Automatic rootfs downloading based on ELF information."
readme = "README.md"
requires-python = ">=3.10"
keywords = ["surfactant"]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Environment :: Console",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "surfactant",
    "loguru==0.7.*",
    "requests>=2.32.3",
    "beautifulsoup4==4.*",
]
dynamic = ["version"]

[project.entry-points."surfactant"]
"surfactantplugin_rootfsdownloader" = "surfactantplugin_rootfsdownloader"

[tool.setuptools]
py-modules=["surfactantplugin_rootfsdownloader"]
